@@ -1,10 +1,8 @@
 ;; if you want to use offical cedet
-;; (let ((cedet-path "~/.emacs.d/cedet-1.0pre7")
-;;       (packages '("common" "eieio" "semantic" "srecode"
-;;                   "ede" "speedbar" "cogre" "contrib")))
-;;   (add-to-list 'load-path cedet-path)
-;;   (dolist (package packages)
-;;     (add-to-list 'load-path (expand-file-name package cedet-path))))
+(let ((default-directory (expand-file-name "~/.emacs.d/cedet-1.0pre7")))
+  (add-to-list 'load-path default-directory)
+  (if (fboundp 'normal-top-level-add-subdirs-to-load-path)
+      (normal-top-level-add-subdirs-to-load-path)))
 
 (add-to-list 'load-path "~/.emacs.d/dotemacs")
 ;; (add-to-list 'load-path "e:/common/dotemacs")
