@@ -1,6 +1,7 @@
 2010-05-11  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Compilation with offical CEDET and buildin CEDET.
+	: Better compilation with offical CEDET and buildin CEDET.
 
 2010-05-10  Meteor Liu  <meteor1113@gmail.com>
 
